# picodoc

./: Makefile  README.md  ROADMAP.md  grammar.ebnf  picodoc-spec.md  pyproject.toml
editor/nvim/ftdetect/: picodoc.vim
editor/nvim/ftplugin/: picodoc.vim
editor/nvim/syntax/: picodoc.vim
examples/: 01-basic-document.html  01-basic-document.pdoc  02-inline-formatting.html  02-inline-formatting.pdoc  03-strings.html  03-strings.pdoc  04-user-macros.html  04-user-macros.pdoc  05-lists.html  05-lists.pdoc  06-tables.html  06-tables.pdoc  07-conditionals.html  07-conditionals.pdoc  08-code-and-literal.html  08-code-and-literal.pdoc  09-escaping.html  09-escaping.pdoc  10-document-meta.html  10-document-meta.pdoc
examples/11-include/: footer.pdoc  header.pdoc  main.html  main.pdoc
src/picodoc/: __init__.py  __main__.py  ast.py  builtins.py  cli.py  debug.py  errors.py  eval.py  filters.py  inject.py  lexer.py  lsp.py  parser.py  render.py  strings.py  tokens.py
tests/: conftest.py  test_cli.py  test_config.py  test_errors.py  test_escapes.py  test_eval.py  test_examples.py  test_filters.py  test_html_examples.py  test_identifiers.py  test_inject.py  test_interp_strings.py  test_lsp.py  test_parse_args.py  test_parse_body.py  test_parse_calls.py  test_parse_document.py  test_parse_errors.py  test_parse_examples.py  test_parse_strings.py  test_raw_strings.py  test_render.py  test_tokens.py  test_whitespace.py
