[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picodoc"
version = "0.1.0"
description = "PicoDoc markup language compiler"
requires-python = ">=3.14"

[project.scripts]
picodoc = "picodoc.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/picodoc"]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
